//
//  AccessibilityIdentifiers.swift
//  MovieQuiz
//
//  Created by Mark Vadimov on 22.03.26.
//


struct AccessibilityIdentifiers {
    static let poster = "Poster"
    static let index = "Index"
    static let yesButton = "Yes"
    static let noButton = "No"
}
