...
            
            let gamesCount = statisticService.gamesCount
            let bestScore = statisticService.bestGame.correct
            let date = statisticService.bestGame.date.dateTimeString
            let accuracy = "\(String(format: "%.2f", statisticService.totalAccuracy))%"
            
            viewController?.show(quiz: QuizResultsViewModel(title: "Этот раунд окончен!",
                                                            text: "Ваш результат \(correctAnswers)/10\nКоличество сыгранных квизов: \(gamesCount)\nРекорд: \(bestScore)/10 (\(date))\nСредняя точность: \(accuracy)",
                                                            buttonText: "Попробовать еще раз"))
        } else {
            self.switchToNextQuestion()
            questionFactory?.requestNextQuestion()
        }
...
